--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -20,6 +20,9 @@ if test -z $with_protoc_bindir && test -z "@no_qt@"; then
   with_protoc_bindir=$depends_prefix/native/bin
 fi
 
+if test -z $with_qrencode && test -n "@no_qr@"; then
+  with_qrencode=no
+fi
 
 if test -z $enable_wallet && test -n "@no_wallet@"; then
   enable_wallet=no
